--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
     <body>
         <!-- !main content -->
         <div id="main-cont">
-            <article style="grid-area: area1" class="grid-item item1">
-                <h2>Create and schedule content <i>quicker</i>.</h2>
+            <!-- desktop - grid-area: 1 | mobile - grid-order: 7 -->
+            <article class="grid-item item1">
+                <h2>Create and schedule content <i>quicker.</i></h2>
 
                 <img
                     src="./assets/images/illustration-create-post.webp"
@@ -32,8 +33,9 @@
                 />
             </article>
 
-            <article style="grid-area: area2" class="grid-item item2">
-                <h2>Social Media 10x Faster with AI</h2>
+            <!-- desktop - grid-area: 2 | mobile - grid-order: 2 -->
+            <article class="grid-item item2">
+                <h2>Social Media <span>10x</span> <i>Faster</i> with AI</h2>
 
                 <img
                     src="./assets/images/illustration-five-stars.webp"
@@ -45,7 +47,8 @@
                 <p>Over 4,000 5-star reviews</p>
             </article>
 
-            <article style="grid-area: area3" class="grid-item item3">
+            <!-- desktop - grid-area: 3 | mobile - grid-order: 4 -->
+            <article class="grid-item item3">
                 <h2>Schedule to social media.</h2>
 
                 <img
@@ -57,11 +60,12 @@
 
                 <p>
                     Optimize post timings to publish content at the perfect time
-                    for your audience
+                    for your audience.
                 </p>
             </article>
 
-            <article style="grid-area: area4" class="grid-item item5">
+            <!-- desktop - grid-area: 4 | mobile - grid-order: 2 -->
+            <article class="grid-item item4">
                 <img
                     src="./assets/images/illustration-multiple-platforms.webp"
                     alt="instagram and X account"
@@ -69,11 +73,12 @@
                     height="134"
                 />
 
-                <h2>Manage multiple accounts and platforms</h2>
+                <h2>Manage multiple accounts and platforms.</h2>
             </article>
 
-            <article style="grid-area: area5" class="grid-item item6">
-                <h2>Maintain a consistent posting schedule</h2>
+            <!-- desktop - grid-area: 5 | mobile - grid-order: 3 -->
+            <article class="grid-item item5">
+                <h2>Maintain a consistent posting schedule.</h2>
 
                 <img
                     src="./assets/images/illustration-consistent-schedule.webp"
@@ -83,8 +88,9 @@
                 />
             </article>
 
-            <article style="grid-area: area6" class="grid-item item4">
-                <h2>Write your content using AI</h2>
+            <!-- desktop - grid-area: 6 | mobile - grid-order: 8 -->
+            <article class="grid-item item6">
+                <h2>Write your content using AI.</h2>
 
                 <img
                     src="./assets/images/illustration-ai-content.webp"
@@ -94,7 +100,9 @@
                 />
             </article>
 
-            <article style="grid-area: area7" class="grid-item item7">
+            <!-- desktop - grid-area: 7 | mobile - grid-order: 6 -->
+
+            <article class="grid-item item7">
                 <p>>56%</p>
                 <h2>faster audience growth</h2>
 
@@ -106,7 +114,8 @@
                 />
             </article>
 
-            <article style="grid-area: area8" class="grid-item item8">
+            <!-- desktop - grid-area: 8 | mobile - grid-order: 5 -->
+            <article class="grid-item item8">
                 <img
                     src="./assets/images/illustration-grow-followers.webp"
                     alt="bar chart showing an increase in follower growth"
