--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!-- !main content -->
         <div id="main-cont">
             <!-- desktop - grid-area: 1 | mobile - grid-order: 7 -->
-            <article class="grid-item item1">
+            <article class="grid-item create-post">
                 <h2>Create and schedule content <i>quicker.</i></h2>
 
                 <img
@@ -33,8 +33,8 @@
                 />
             </article>
 
-            <!-- desktop - grid-area: 2 | mobile - grid-order: 2 -->
-            <article class="grid-item item2">
+            <!-- desktop - grid-area: 2 | mobile - grid-order: 1 -->
+            <article class="grid-item social-media-faster">
                 <h2>Social Media <span>10x</span> <i>Faster</i> with AI</h2>
 
                 <img
@@ -48,7 +48,7 @@
             </article>
 
             <!-- desktop - grid-area: 3 | mobile - grid-order: 4 -->
-            <article class="grid-item item3">
+            <article class="grid-item schedule-to-social-media">
                 <h2>Schedule to social media.</h2>
 
                 <img
@@ -65,7 +65,7 @@
             </article>
 
             <!-- desktop - grid-area: 4 | mobile - grid-order: 2 -->
-            <article class="grid-item item4">
+            <article class="grid-item manage-multiple-accounts">
                 <img
                     src="./assets/images/illustration-multiple-platforms.webp"
                     alt="instagram and X account"
@@ -77,7 +77,7 @@
             </article>
 
             <!-- desktop - grid-area: 5 | mobile - grid-order: 3 -->
-            <article class="grid-item item5">
+            <article class="grid-item maintain-consistent-schedule">
                 <h2>Maintain a consistent posting schedule.</h2>
 
                 <img
@@ -89,7 +89,7 @@
             </article>
 
             <!-- desktop - grid-area: 6 | mobile - grid-order: 8 -->
-            <article class="grid-item item6">
+            <article class="grid-item write-using-ai">
                 <h2>Write your content using AI.</h2>
 
                 <img
@@ -102,7 +102,7 @@
 
             <!-- desktop - grid-area: 7 | mobile - grid-order: 6 -->
 
-            <article class="grid-item item7">
+            <article class="grid-item faster-audience-growth">
                 <p>>56%</p>
                 <h2>faster audience growth</h2>
 
@@ -115,7 +115,7 @@
             </article>
 
             <!-- desktop - grid-area: 8 | mobile - grid-order: 5 -->
-            <article class="grid-item item8">
+            <article class="grid-item grow-followers">
                 <img
                     src="./assets/images/illustration-grow-followers.webp"
                     alt="bar chart showing an increase in follower growth"
@@ -123,7 +123,7 @@
                     height="402"
                 />
 
-                <h2>Grow followers with non-stop content</h2>
+                <h2>Grow followers with non-stop content.</h2>
             </article>
         </div>
 
